# causalimpact

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  .travis_coveragerc  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  GettingStarted.ipynb  MANIFEST.in  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tensorflow exploration.ipynb  tmp_expected  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  main.yml  python-package-conda.yml
causalimpact/: __init__.py  analysis.py  inferences.py  misc.py  model.py
causalimpact/tests/: README.md  conftest.py  test.py  test_analysis.py  test_inferences.py  test_misc.py  test_model.py
causalimpact/tests/fixtures/analysis/: summary_report_output.txt
src/causalimpact/: __init__.py  analysis.py  inferences.py  misc.py  model.py
tests/: README.md  conftest.py  test.py  test_analysis.py  test_inferences.py  test_misc.py  test_model.py
tests/fixtures/analysis/: summary_report_output.txt
