[metadata]
name = causalimpact
description = Python Package for causal inference using Bayesian structural time-series models
author = Jamal Senouci
author_email = jamalsenouci@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jamalsenouci/causalimpact/
project_urls =
	Documentation = https://nbviewer.org/github/jamalsenouci/causalimpact/blob/master/GettingStarted.ipynb
	Source = https://github.com/jamalsenouci/causalimpact/
	Changelog = https://github.com/jamalsenouci/causalimpact/CHANGELOG.md
	Download = https://pypi.python.org/pypi/causalimpact/
platforms = any
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
	=src
python_requires = >=2.6
install_requires =
	pandas
	numpy
	statsmodels
	matplotlib
	pymc3
	importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
testing =
	setuptools
	pytest
	pytest-cov

[options.entry_points]

[tool:pytest]
addopts =
	--cov causalimpact --cov-report term-missing
	--verbose
norecursedirs =
	dist
	build
	.tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.2.1
package = causalimpact
extensions =
	no_skeleton
